--- a/02-CSS/homework/responsive-web/index.html
+++ b/02-CSS/homework/responsive-web/index.html
@@ -36,7 +36,7 @@
     <div class="container home">
       <header class="intro">
         <!-- Código de header img acá -->
-        <img src="./img/main-header.png" id="img-header">
+        <img id="img-header" src="./img/main-header.png">
 
         <h2>Nueva tecnología</h2>
 
